# Mikan-Judge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose.dev-docker.yml  docker-compose.yml  flake.nix
migrations/: 001_create_users.sql  002_create_submissions.sql  003_add_testcase_results.sql  004_create_sessions.sql  005_create_contests.sql  006_add_contest_id_to_submissions.sql  007_seed_welcome_mikan.sql  008_add_judge_type_to_contests.sql  009_add_score_to_submissions.sql  010_seed_heuristic_demo.sql  011_update_heuristic_demo_problem.sql  012_add_default_language_to_users.sql  013_submissions_user_id_on_delete_set_null.sql
problems/aplusb/: meta.toml  statement.md
problems/closest_sum/: meta.toml  scorer.py  statement.md
problems/closest_sum/testcases/: 01.in  02.in  03.in  04.in  05.in
problems/max_cut/: meta.toml  scorer.py  statement.md
problems/max_cut/testcases/: 01.in  02.in  03.in  04.in  05.in
src/: main.rs  problem.rs  session_store.rs  types.rs
src/api/: handlers.rs  mod.rs
src/db/: contest.rs  mod.rs  submission.rs  user.rs
src/sandbox/: mod.rs  runner.rs  seccomp.rs
src/worker/: mod.rs
static/: style.css
templates/: base.html  index.html  languages.html  settings.html
templates/auth/: login.html  register.html
templates/contests/: list.html  standings.html
templates/contests/problems/: detail.html  index.html
templates/errors/: forbidden.html
templates/problems/: detail.html  index.html
templates/submissions/: _verdict.html  detail.html  index.html  poll.html
(+3 files in other folders)
