[package]
name = "mikan-judge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
nix = { version = "0.29", features = ["fs", "process", "resource", "sched", "signal"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }

# seccomp は Linux 専用。本番VPSでは apt install libseccomp-dev が必要。
[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = "0.3"
